<resources>
  <string name="app_name">Quản lý nhà hàng</string>
  <string name="hint_username">Tên đăng nhập</string>
  <string name="hint_password">Mật khẩu</string>
  <string name="male">Nam</string>
  <string name="female">Nữ</string>
  <string name="birthday">Ngày sinh</string>
  <string name="admin">Quản lý</string>
  <string name="employee">Nhân viên</string>
  <string name="add_new_employee">Thêm nhân viên mới</string>
  <string name="sign_up">Đăng ký</string>
  <string name="sign_up_title">ĐĂNG KÝ</string>
  <string name="exit">Thoát</string>
  <string name="login">Đăng nhập</string>
  <string name="login_title">ĐĂNG NHẬP</string>
  <string name="des_img">Image</string>
  <string name="menu_home">Trang chủ</string>
  <string name="menu_food">Thực đơn</string>
  <string name="employees">Danh sách nhân viên</string>
  <string name="menu_statistics">Thống kê</string>
  <string name="settings">Cài đặt</string>
  <string name="manage_accounts">Quản lý nhân viên</string>
  <string name="list_tables">Danh sách bàn</string>
  <string name="open">Mở</string>
  <string name="close">Đóng</string>
  <string name="login_failed">Đăng nhập thất bại!!</string>
  <string name="add_table">Thêm bàn mới</string>
  <string name="table_name">Tên bàn</string>
  <string name="table_title">DANH SÁCH BÀN</string>
  <string name="add">Thêm</string>
  <string name="add_new_menu">THÊM THỰC ĐƠN MỚI</string>
  <string name="food_name">Tên món ăn</string>
  <string name="quantity">Số lượng</string>
  <string name="total_price">Thành tiền</string>
  <string name="total_amount">Tổng tiền</string>
  <string name="food_type">Loại</string>
  <string name="price">Đơn giá</string>
  <string name="image_food">Hình thức ăn</string>
  <string name="add_menu">Thêm thực đơn mới</string>
  <string name="menu_management">Quản lý</string>
  <string name="menu_manage_food">Quản lý thực đơn</string>
  <string name="color_hint">Mã màu</string>
  <string name="zero">0</string>
  <string name="small">Nhỏ</string>
  <string name="medium">Vừa</string>
  <string name="large">Lớn</string>
  <string name="minus">-</string>
  <string name="plus">+</string>
  <string name="discount">Chiết khấu</string>
  <string name="payment">Thanh toán</string>
</resources>