<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorGreen">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/size30sp"
    android:text="@string/login_title"
    android:layout_above="@id/lnLogin"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    android:layout_centerHorizontal="true"
    />

  <ImageView
    android:layout_width="@dimen/size100dp"
    android:layout_height="@dimen/size100dp"
    android:src="@drawable/lock"
    android:layout_above="@id/lnLogin"
    android:layout_alignEnd="@id/lnLogin"
    android:contentDescription="@string/des_img"
    />

  <LinearLayout
    android:id="@+id/lnLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true">

    <EditText
      android:id="@+id/txtUsername"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_username"
      android:padding="@dimen/size10dp"
      android:layout_marginLeft="@dimen/size10dp"
      android:layout_marginRight="@dimen/size10dp"
      android:layout_marginBottom="@dimen/size10dp"
      android:background="@color/colorWhite"
      android:textColorHint="@color/colorGray"
      android:textColor="@color/black"
      android:drawableStart="@drawable/user"
      android:drawablePadding="@dimen/size10dp"
      android:singleLine="true"
      android:autofillHints="username"
      android:inputType="text" />

    <EditText
      android:id="@+id/txtPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_password"
      android:padding="@dimen/size10dp"
      android:layout_marginLeft="@dimen/size10dp"
      android:layout_marginRight="@dimen/size10dp"
      android:layout_marginBottom="@dimen/size10dp"
      android:background="@color/colorWhite"
      android:textColorHint="@color/colorGray"
      android:textColor="@color/black"
      android:drawableStart="@drawable/password"
      android:drawablePadding="@dimen/size10dp"
      android:singleLine="true"
      android:inputType="textPassword"
      android:autofillHints="password" />

    <Button
      android:id="@+id/btnLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:padding="@dimen/size10dp"
      android:background="@color/colorLightBlue"
      android:layout_marginLeft="@dimen/size10dp"
      android:layout_marginRight="@dimen/size10dp"
      android:layout_marginBottom="@dimen/size10dp"/>

  </LinearLayout>

</RelativeLayout>