<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/txtTableName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/size18sp"
    android:textColor="@color/colorRed"
    android:textStyle="bold"
    android:gravity="center" />
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/size10dp"
    android:background="@color/colorLightGreen"
    android:layout_marginTop="@dimen/size10dp">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/food_name"
      android:layout_weight="1"
      android:textSize="@dimen/size18sp"
      android:textColor="@color/black"
      android:textStyle="bold"
      android:gravity="center" />

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/quantity"
      android:layout_weight="1"
      android:textSize="@dimen/size18sp"
      android:textColor="@color/black"
      android:textStyle="bold"
      android:gravity="center"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/total_price"
      android:layout_weight="1"
      android:textSize="@dimen/size18sp"
      android:textColor="@color/black"
      android:textStyle="bold"
      android:gravity="center"/>
  </LinearLayout>

  <GridView
    android:id="@+id/grvBillDetail"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginBottom="@dimen/size10dp"
    android:layout_weight="1" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/size10dp"
    android:padding="@dimen/size10dp">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/totalPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/total_price"
        android:textSize="@dimen/size18sp"
        android:textColor="@color/colorBrown"
        android:textStyle="bold"
        />

      <TextView
        android:id="@+id/txtTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/size18sp"
        android:textColor="@color/colorBrown"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/size10dp"
      android:orientation="horizontal">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/discount"
        android:textSize="@dimen/size18sp"
        android:textColor="@color/colorBrown"
        android:textStyle="bold"
        />

      <EditText
        android:id="@+id/txtDiscountPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="textEnd"
        android:textSize="@dimen/size18sp"
        android:textColor="@color/colorBrown"
        android:textStyle="bold"
        android:autofillHints="@string/discount"
        android:inputType="number"
        tools:ignore="LabelFor" />

      <TextView
        android:id="@+id/txtDiscount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/size18sp"
        android:textColor="@color/colorBrown"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />
    </LinearLayout>

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/size10dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/total_amount"
        android:textSize="@dimen/size18sp"
        android:textColor="@color/colorRed"
        android:textStyle="bold"
        />

      <TextView
        android:id="@+id/txtTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/size18sp"
        android:textColor="@color/colorRed"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />
    </RelativeLayout>
  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size10dp"
    android:padding="@dimen/size10dp">

    <Button
      android:id="@+id/btnDoPayment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginEnd="@dimen/size10dp"
      android:text="@string/payment"
      android:textColor="@color/colorWhite"
      android:background="@color/colorBlue"
      style="?android:attr/buttonBarButtonStyle" />

    <Button
      android:id="@+id/btnExit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/exit"
      android:textColor="@color/colorWhite"
      android:background="@color/backgroundToolbar"
      style="?android:attr/buttonBarButtonStyle" />
  </LinearLayout>
</LinearLayout>